--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ img {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(/images/background-hero.jpg);
+    url(../images/background-hero.jpg);
   background-color: var(--hero-bg);
 
   background-repeat: no-repeat;
