--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,11 @@ img {
   cursor: pointer;
 }
 
+.button-primary:hover,
+.button-primary:focus {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 /* Секция особенностей */
 .features-icon {
   display: flex;
